routing/gateway/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nestjs-backend-route
  namespace: default
spec:
  parentRefs:
  - name: external-gateway
    namespace: default
  hostnames:
  - "://yourdomain.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: nestjs-backend-service
      port: 80
